# TankEngine

./: CMakeLists.txt  README.md
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/src/core/: GameWindow.cpp
engine/src/utils/: Logger.cpp
include/TankEngine/core/: GameWindow.hpp
include/TankEngine/utils/: Logger.hpp
include/glad/: glad.h
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
